--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -13,7 +13,37 @@ html {
 	font-family: 'Public Sans', sans-serif;
 }
 
+ul,
+ol,
+li {
+	list-style: none;
+}
+
+a {
+	text-decoration: none;
+}
+
+img {
+	max-width: 100%;
+}
+
 body {
-	background-color: $dark-blue;
-	color: $lime-green;
+	background-color: $light-grayish-blue;
+}
+
+.btn {
+	display: inline-block;
+	background: linear-gradient(0.25turn, $lime-green, $bright-cyan);
+	color: $white;
+	padding: 0.7rem 1.5rem;
+	text-align: center;
+	font-size: 0.75rem;
+	border-radius: 1rem;
+	border: none;
+	cursor: pointer;
+	transition: all 0.3s;
+
+	&:hover {
+		background-color: $lime-green;
+	}
 }
