--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -31,6 +31,22 @@ body {
 	background-color: $light-grayish-blue;
 }
 
+header {
+	box-shadow: 0 0 10px rgba($color: $black, $alpha: 0.2);
+	background: $white;
+}
+
+header,
+main,
+footer {
+	padding: 1rem;
+	overflow: hidden;
+}
+
+main {
+	position: relative;
+}
+
 .btn {
 	display: inline-block;
 	background: linear-gradient(0.25turn, $lime-green, $bright-cyan);
@@ -44,6 +60,10 @@ body {
 	transition: all 0.3s;
 
 	&:hover {
-		background-color: $lime-green;
+		opacity: 0.5;
 	}
+}
+
+.hidden {
+	display: none;
 }
